Fixed date styling on mobile

--- a/style.css
+++ b/style.css
@@ -590,7 +590,6 @@ figure {
     }
 
     time {
-        border: 1px solid #afafaf50;
 
         border-radius: 0.3em;
     }
